# anki-compile-py

./: anki-compile.code-workspace
explore/: Makefile  pyproject.toml
explore/explore/: __init__.py  main.py
explore/notebooks/: explore.ipynb  similars.ipynb
harvest-data/: .gitignore  Makefile  pyproject.toml
harvest-data/harvest_data/: extract_from_api.py  main.py  types.py  upload_to_anki.py
