[tool.poetry]
name = "harvest-data"
version = "0.1.0"
description = ""
authors = ["Odelon Jhey Pacalso <odjhey@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
main = "harvest_data.main:run"
upload = "harvest_data.main:upload_to_anki"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
regex = "^2024.11.6"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20241016"
types-regex = "^2024.11.6.20241108"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
